[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/tileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Rooms/Room.gd" type="Script" id=2]

[node name="Field" type="Node2D"]
script = ExtResource( 2 )

[node name="Grass" parent="." instance=ExtResource( 1 )]
z_index = -1
cell_size = Vector2( 32, 32 )
tile_data = PoolIntArray( -589834, 12, 0, -589830, 12, 0, -589826, 12, 0, -655358, 12, 0, -655354, 12, 0, -327690, 12, 0, -327686, 12, 0, -327682, 12, 0, -393214, 12, 0, -393210, 12, 0, -65546, 12, 0, -65542, 12, 0, -65538, 12, 0, -131070, 12, 0, -131066, 12, 0, 196598, 12, 0, 196602, 12, 0, 196606, 12, 0, 131074, 12, 0, 131078, 12, 0, 458742, 12, 0, 458746, 12, 0, 458750, 12, 0, 393218, 12, 0, 393222, 12, 0 )

[node name="Walls" parent="." instance=ExtResource( 1 )]
cell_size = Vector2( 32, 32 )
tile_data = PoolIntArray( -589835, 5, 0, -589834, 2, 0, -589833, 2, 0, -589832, 2, 0, -589831, 2, 0, -589830, 2, 0, -589829, 2, 0, -589828, 2, 0, -589827, 2, 0, -589826, 2, 0, -589825, 2, 0, -655360, 2, 0, -655359, 2, 0, -655358, 2, 0, -655357, 2, 0, -655356, 2, 0, -655355, 2, 0, -655354, 2, 0, -655353, 2, 0, -655352, 2, 0, -655351, 2, 0, -655350, 6, 0, -524299, 7, 0, -589814, 8, 0, -458763, 7, 0, -524278, 8, 0, -393227, 7, 0, -458742, 8, 0, -327691, 7, 0, -393206, 8, 0, -262155, 7, 0, -327670, 8, 0, -196619, 7, 0, -262134, 8, 0, -131083, 7, 0, -196598, 8, 0, -65547, 7, 0, -131062, 8, 0, -11, 7, 0, -65526, 8, 0, 65525, 7, 0, 10, 8, 0, 131061, 7, 0, 65546, 8, 0, 196597, 7, 0, 131082, 8, 0, 262133, 7, 0, 196618, 8, 0, 327669, 7, 0, 262154, 8, 0, 393205, 7, 0, 327690, 8, 0, 458741, 7, 0, 393226, 8, 0, 524277, 7, 0, 458762, 8, 0, 589813, 7, 0, 524298, 8, 0, 655349, 7, 0, 589834, 8, 0, 720885, 4, 0, 720886, 2, 0, 720887, 2, 0, 720888, 2, 0, 720889, 2, 0, 720890, 2, 0, 720891, 2, 0, 720892, 2, 0, 720893, 2, 0, 720894, 2, 0, 720895, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 3, 0 )

[node name="SpawnDuration" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="SpawnDelay" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="SpawnDuration" to="." method="_on_SpawnDuration_timeout"]
[connection signal="timeout" from="SpawnDelay" to="." method="_on_SpawnDelay_timeout"]
